2009-02-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.18

2009-02-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Being intransient is now a sufficient condition to be considered
	system-modal.  A dialog's modality is not relevant to its
	system-modality.  After discussion with Kimmo.  
	This isn't the change that fixes MB#97489 but is in sympathy
	with it.

	* matchbox/core/mb-window-manager.c: Change preresquisites for
	being system-modal.
	* matchbox/core/mb-wm-types.h: Update comment.

2009-02-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-window.c: initialise cookies
        so the compiler won't complain about it

2009-02-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-dialog.c
	(mb_wm_client_dialog_init): Respect the undecorated flag when
	determining the size of the dialog.

2009-02-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.17

2009-02-13  Gordon Williams  <gordon.williams@collabora.co.uk>
	
	* matchbox/core/mb-wm-decor.c
	* matchbox/core/mb-wm-decor.h:
	  Reverted previous (2009-02-12) changes as no longer required

2009-02-12  Gordon Williams  <gordon.williams@collabora.co.uk>
	
	* matchbox/core/mb-wm-decor.c
	* matchbox/core/mb-wm-decor.h:
	  Added signals for button pressed + released (to help hd-button
	  highlight correctly)
	* matchbox/core/mb-window-manager.h:
	  Fixed typo

2009-02-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes for Coverity issues:
	* matchbox/client-types/mb-wm-client-desktop.c
	(mb_wm_client_desktop_init): Remove unused return value.
	* matchbox/client-types/mb-wm-client-app.c (mb_wm_client_app_init):
	Remove unused return value.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_turn_off_real): NULL-check 'mgr' before (not
	after) dereferencing it.
	(mb_wm_comp_mgr_clutter_client_configure_real): Remove useless check
	for window.